--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -257,6 +257,12 @@
                             <span class="nav-menu-item-title">Category</span>
                         </a>
                     </li>
+                     <li class="nav-menu-item">
+                        <a  asp-controller="user" asp-action="index">
+                            <i class="fa-regular fa-user"></i>
+                            <span class="nav-menu-item-title">Users</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
             <!-- Side Nav END -->
