--- a/Areas/admin/Views/User/ResetPassword.cshtml
+++ b/Areas/admin/Views/User/ResetPassword.cshtml
@@ -1,7 +1,7 @@
-﻿@model RegisterVM
+﻿@model ResetPasswordVM
 
 @{
-    ViewData["Title"] = "Update";
+    Layout = null;
 }
 
 <h1>Reset Password</h1>
@@ -9,8 +9,8 @@
 
 <div class="form-input">
     <div class="text text-danger" asp-validation-summary="ModelOnly"></div>
-  <form method="POST" asp-controller="brand" asp-action="update" asp-area="admin">
-                                       <div class="form-group mb-5">
+  <form method="POST" >
+      <div class="form-group mb-5">
                                         <label>Password *</label>
                                         <input asp-for="Password" class="form-control" required>
                                         <span cite="text text-danger" asp-validation-for="Password"></span>
@@ -19,7 +19,7 @@
                                         <label>Confirm Password</label>
                                         <input asp-for="ConfirmPassword" class="form-control" required>
                                         <span cite="text text-danger" asp-validation-for="ConfirmPassword"></span>
-                                        </div>
+      </div>                                 
 
     <button type="submit">Update</button> 
   </form>
