--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -279,7 +279,7 @@
                                 <li><a href="wishlist.html">Wishlist</a></li>
                                 <li><a href="cart.html">Cart</a></li>
                                 <li><a href="checkout.html">Checkout</a></li>
-                                <li><a href="my-account.html">My Account</a></li>
+                                <li><a asp-controller="account" asp-action="profile">My Account</a></li>
                             </ul>
                         </li>
                         <li>
