Updated account controller

--- a/Views/Shared/_AccountProfilePartial.cshtml
+++ b/Views/Shared/_AccountProfilePartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@model ProfileVM
 
+<div class="text text-danger" asp-validation-summary="ModelOnly"></div>
 <form class="form account-details-form" method="post" asp-controller="account" asp-action="update">
                                     <div class="row">
                                         <div class="col-md-6">
@@ -38,18 +39,21 @@
                                     <h4 class="title title-password ls-25 font-weight-bold">Password change</h4>
                                     <div class="form-group">
                                         <label class="text-dark" for="cur-password">Current Password leave blank to leave unchanged</label>
-                                        <input type="password" class="form-control form-control-md"
+                                        <input asp-for="CurrentPassword" class="form-control form-control-md"
                                             id="cur-password" name="cur_password">
+                                        <span class="text text-danger" asp-validation-for="CurrentPassword"></span>
                                     </div>
                                     <div class="form-group">
-                                        <label class="text-dark" for="new-password">New Password leave blank to leave unchanged</label>
+                                        <label class="text-dark" asp-for="Password">New Password leave blank to leave unchanged</label>
                                         <input type="password" class="form-control form-control-md"
                                             id="new-password" name="new_password">
+                                        <span class="text text-danger" asp-validation-for="Password"></span>
                                     </div>
                                     <div class="form-group mb-10">
                                         <label class="text-dark" for="conf-password">Confirm Password</label>
-                                        <input type="password" class="form-control form-control-md"
+                                        <input asp-for="ConfirmPassword" class="form-control form-control-md"
                                             id="conf-password" name="conf_password">
+                                        <span class="text text-danger" asp-validation-for="ConfirmPassword"></span>
                                     </div>
                                     <button type="submit" class="btn btn-dark btn-rounded btn-sm mb-4">Save Changes</button>
 </form>
