--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="~/assets/images/icons/favicon.png">
+      <link href="~/admin/assets/css/sweetalert2.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
 
     <!-- WebFont.js -->
     <script>
@@ -59,6 +61,15 @@
 </head>
 
 <body class="home">
+
+    @if(TempData["success"] != null)
+    {
+        <input type="hidden" id="successInput" value="@TempData["success"]"/>   
+    }
+    @if(TempData["successPassword"] != null)
+    {
+        <input type="hidden" id="successInputPassword" value="@TempData["successPassword"]"/>   
+    }
     <div class="page-wrapper">
         <h1 class="d-none">Wolmart - Responsive Marketplace HTML Template</h1>
         <!-- Start of Header -->
@@ -619,6 +630,8 @@
     <script src="~/assets/vendor/zoom/jquery.zoom.js"></script>
     <script src="~/assets/vendor/skrollr/skrollr.min.js"></script>
     <script src="~/assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="~/admin/assets/js/script.js" asp-append-version="true"></script>
+
 
         <!-- Swiper JS -->
     <script src="~/assets/vendor/swiper/swiper-bundle.min.js"></script>
@@ -627,31 +640,6 @@
     <script src="~/assets/js/main.min.js"></script>
     <script src="~/assets/js/script.js" asp-append-version="true"></script>
     @RenderSection("Script",false)
-
-    <script>
-        $(document.ready(function () {
-        Command: toastr["success"]("Clear itself?<br /><br /><button type="button" class="btn clear">Yes</button>")
-
-        toastr.options = {
-          "closeButton": true,
-          "debug": false,
-          "newestOnTop": false,
-          "progressBar": true,
-          "positionClass": "toast-top-right",
-          "preventDuplicates": false,
-          "onclick": null,
-          "showDuration": "300",
-          "hideDuration": "1000",
-          "timeOut": 0,
-          "extendedTimeOut": 0,
-          "showEasing": "swing",
-          "hideEasing": "linear",
-          "showMethod": "fadeIn",
-          "hideMethod": "fadeOut",
-          "tapToDismiss": false
-        } 
-        })   
-    </script>
 
 <script>(function(){var js = "window['__CF$cv$params']={r:'7cac68295c258ec2',m:'EhmqnA6ZtunpgLWMh9n.G.MU0oTlf2fO8xkV9ctFx.I-1684667782-0-AWPyjIy+wU9mTXFsRSEriCAY4QxqCDNam4dnZrThuF5Q',u:'/cdn-cgi/challenge-platform/h/g'};_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='../../cdn-cgi/challenge-platform/h/g/scripts/jsd/7fe8adc8/invisible.js',document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.nonce = '';_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script></body>
 
