Fixed toastr in account profile

--- a/Views/Shared/_AccountProfilePartial.cshtml
+++ b/Views/Shared/_AccountProfilePartial.cshtml
@@ -6,7 +6,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="firstname">First name *</label>
-                                                <input asp-for="Name" id="firstname" name="firstname" placeholder="John"
+                                                <input asp-for="Name"  placeholder="First name"
                                                     class="form-control form-control-md">
                                                 <span class="text text-danger" asp-validation-for="Name"></span>
                                             </div>
@@ -14,7 +14,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="lastname">Last name *</label>
-                                                <input asp-for="Surname" id="lastname" name="lastname" placeholder="Doe"
+                                                <input asp-for="Surname" placeholder="Last name"
                                                     class="form-control form-control-md">
                                                 <span class="text text-danger" asp-validation-for="Surname"></span>
                                             </div>
@@ -23,14 +23,14 @@
 
                                     <div class="form-group mb-3">
                                         <label for="display-name">Username *</label>
-                                        <input asp-for="Username" id="display-name" name="display_name" placeholder="John Doe"
+                                        <input asp-for="Username" placeholder="Username"
                                             class="form-control form-control-md mb-0">
                                             <span class="text text-danger" asp-validation-for="Username"></span>
                                     </div>
 
                                     <div class="form-group mb-6">
-                                        <label for="email_1">Email address *</label>
-                                        <input asp-for="Email" id="email_1" name="email_1"
+                                        <label>Email address *</label>
+                                        <input asp-for="Email" 
                                             class="form-control form-control-md">
                                         <span class="text text-danger" asp-validation-for="Email"></span>
 
@@ -40,19 +40,19 @@
                                     <div class="form-group">
                                         <label class="text-dark" for="cur-password">Current Password leave blank to leave unchanged</label>
                                         <input asp-for="CurrentPassword" class="form-control form-control-md"
-                                            id="cur-password" name="cur_password">
+                                           >
                                         <span class="text text-danger" asp-validation-for="CurrentPassword"></span>
                                     </div>
                                     <div class="form-group">
                                         <label class="text-dark" asp-for="Password">New Password leave blank to leave unchanged</label>
                                         <input type="password" class="form-control form-control-md"
-                                            id="new-password" name="new_password">
+                                            >
                                         <span class="text text-danger" asp-validation-for="Password"></span>
                                     </div>
                                     <div class="form-group mb-10">
                                         <label class="text-dark" for="conf-password">Confirm Password</label>
                                         <input asp-for="ConfirmPassword" class="form-control form-control-md"
-                                            id="conf-password" name="conf_password">
+                                            >
                                         <span class="text text-danger" asp-validation-for="ConfirmPassword"></span>
                                     </div>
                                     <button type="submit" class="btn btn-dark btn-rounded btn-sm mb-4">Save Changes</button>
