Updated order structure

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -164,6 +164,7 @@
                                     <thead>
                                         <tr>
                                             <th class="order-id">Order</th>
+                                            <th class="order-name">Name</th>
                                             <th class="order-date">Date</th>
                                             <th class="order-status">Status</th>
                                             <th class="order-total">Total</th>
@@ -173,49 +174,11 @@
                                     <tbody>
                                         <tr>
                                             <td class="order-id">#2321</td>
+                                            <td class="order-name">Namiq Mamedov</td>
                                             <td class="order-date">August 20, 2021</td>
                                             <td class="order-status">Processing</td>
                                             <td class="order-total">
                                                 <span class="order-price">$121.00</span> for
-                                                <span class="order-quantity"> 1</span> item
-                                            </td>
-                                            <td class="order-action">
-                                                <a href="#"
-                                                    class="btn btn-outline btn-default btn-block btn-sm btn-rounded">View</a>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="order-id">#2321</td>
-                                            <td class="order-date">August 20, 2021</td>
-                                            <td class="order-status">Processing</td>
-                                            <td class="order-total">
-                                                <span class="order-price">$150.00</span> for
-                                                <span class="order-quantity"> 1</span> item
-                                            </td>
-                                            <td class="order-action">
-                                                <a href="#"
-                                                    class="btn btn-outline btn-default btn-block btn-sm btn-rounded">View</a>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="order-id">#2319</td>
-                                            <td class="order-date">August 20, 2021</td>
-                                            <td class="order-status">Processing</td>
-                                            <td class="order-total">
-                                                <span class="order-price">$201.00</span> for
-                                                <span class="order-quantity"> 1</span> item
-                                            </td>
-                                            <td class="order-action">
-                                                <a href="#"
-                                                    class="btn btn-outline btn-default btn-block btn-sm btn-rounded">View</a>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="order-id">#2318</td>
-                                            <td class="order-date">August 20, 2021</td>
-                                            <td class="order-status">Processing</td>
-                                            <td class="order-total">
-                                                <span class="order-price">$321.00</span> for
                                                 <span class="order-quantity"> 1</span> item
                                             </td>
                                             <td class="order-action">
