--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using Wolmart.Ecommerce.ViewModels.HeaderVM
 @using Wolmart.Ecommerce.ViewModels.HomeViewModels 
 @using Wolmart.Ecommerce.ViewModels.AccountViewModels
+@using Wolmart.Ecommerce.ViewModels.OrderViewModels
 @using Wolmart.Ecommerce.ViewModels
 
