--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -102,7 +102,7 @@
                         <span class="divider d-lg-show"></span>
                         <a href="blog.html" class="d-lg-show">Blog</a>
                         <a href="contact-us.html" class="d-lg-show">Contact Us</a>
-                        <a href="my-account.html" class="d-lg-show">My Account</a>
+                        <a asp-controller="account" asp-action="profile" class="d-lg-show">My Account</a>
                         @if (User.Identity.IsAuthenticated)
                         {
                             <a asp-controller="account" asp-action="login" class="d-lg-show"><i
