--- a/Views/Shared/_CartPartial.cshtml
+++ b/Views/Shared/_CartPartial.cshtml
@@ -39,8 +39,8 @@
                                 <span class="price">$@(Model.Sum(p=>p.Price * p.Count))</span>
                             </div>
                             <div class="cart-action">
-                                <a href="cart.html" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
-                                <a href="checkout.html" class="btn btn-primary  btn-rounded">Checkout</a>
+                                <a asp-controller="cart" asp-action="index" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
+                                <a asp-controller="order" asp-action="index" class="btn btn-primary  btn-rounded">Checkout</a>
                             </div>
                             </div>
                             </div>
