Updated order controller in admin area

--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -265,6 +265,12 @@
                                 <span class="nav-menu-item-title">Users</span>
                             </a>
                         </li>
+                        <li class="nav-menu-item">
+                            <a asp-controller="order" asp-action="index">
+                                <i class="fa-regular fa-user"></i>
+                                <span class="nav-menu-item-title">Orders</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <!-- Side Nav END -->
