--- a/Areas/admin/Views/_ViewImports.cshtml
+++ b/Areas/admin/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Wolmart.Ecommerce.Models
 @using Wolmart.Ecommerce.Services
 @using Wolmart.Ecommerce.ViewModels
+@using Wolmart.Ecommerce.Enums
 @using Wolmart.Ecommerce.Areas.admin.ViewModels.AccountViewModels
