--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -267,7 +267,7 @@
                         </li>
                         <li class="nav-menu-item">
                             <a asp-controller="order" asp-action="index">
-                                <i class="fa-regular fa-user"></i>
+                                 <i class="fa-solid fa-receipt"></i>
                                 <span class="nav-menu-item-title">Orders</span>
                             </a>
                         </li>
