Created settings controller

--- a/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/Areas/admin/Views/Shared/_Layout.cshtml
@@ -271,6 +271,12 @@
                                 <span class="nav-menu-item-title">Orders</span>
                             </a>
                         </li>
+                        <li class="nav-menu-item">
+                            <a asp-controller="setting" asp-action="index">
+                                <i class="fa-solid fa-wrench"></i>
+                                <span class="nav-menu-item-title">Settings</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <!-- Side Nav END -->
