--- a/Areas/admin/Views/Shared/_OrderIndexPartial.cshtml
+++ b/Areas/admin/Views/Shared/_OrderIndexPartial.cshtml
@@ -11,6 +11,7 @@
       <th scope="col">Fullname</th>
       <th scope="col">Product Count</th>
       <th scope="col">Status</th>
+      <th scope="col">Date</th>
       <th scope="col">Total Price</th>
     </tr>
   </thead>
@@ -28,10 +29,6 @@
               <td>
                    <a asp-controller="order" asp-action="update" asp-area="admin" asp-route-id="@order.ID" class="btn btn-primary">
                       <i class="fa-solid fa-pen-to-square"></i>
-                  </a>
-
-                  <a class="btn btn-secondary">
-                    <i class="fa-solid fa-circle-info"></i>
                   </a>
               </td>
             </tr>
