--- a/Areas/admin/Views/Setting/Update.cshtml
+++ b/Areas/admin/Views/Setting/Update.cshtml
@@ -8,11 +8,20 @@
         <div class="row">
             <form method="post" enctype="multipart/form-data">
                 <div class="mb-3">
-                    <div class="form-group">
-                        <label asp-for="Value" for="inputCKname" class="form-label"></label>
-                        <textarea id="inputCKname" asp-for="Value"></textarea>
-                        @*<span asp-validation-for="Value"></span>*@
-                    </div>
+                        @if (Model.Key == "HeaderLogo" && Model.Key != "AboutImage" ) 
+                        {
+                            <img class="img-fluid mb-2" src="~/assets/images/@Model.Value" />
+                            
+                        }
+                       @if(Model.Key == "AboutImage" && Model.Key != "HeaderLogo" )
+                        {
+                         <img class="img-fluid" src="~/assets/images/pages/about_us/@Model.Value" />
+                           
+                        }
+                            <div class="form-group">
+                            <label asp-for="Value" for="inputCKname" class="form-label"></label>
+                            <textarea id="inputCKname" asp-for="Value"></textarea>
+                             </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Update</button>
             </form>
@@ -22,9 +31,112 @@
 
 
 <script>
+    
+    class MyUploadAdapter {
+        constructor(loader) {
+            // The file loader instance to use during the upload. It sounds scary but do not
+            // worry — the loader will be passed into the adapter later on in this guide.
+            this.loader = loader;
+        }
+
+        // More methods.
+        // ...
+
+        upload() {
+            return this.loader.file
+                .then(file => new Promise((resolve, reject) => {
+                    this._initRequest();
+                    this._initListeners(resolve, reject, file);
+                    this._sendRequest(file);
+                }));
+        }
+
+        // Aborts the upload process.
+        abort() {
+            if (this.xhr) {
+                this.xhr.abort();
+            }
+        }
+
+
+
+        _initRequest() {
+            const xhr = this.xhr = new XMLHttpRequest();
+
+            // Note that your request may look different. It is up to you and your editor
+            // integration to choose the right communication channel. This example uses
+            // a POST request with JSON as a data structure but your configuration
+            // could be different.
+            xhr.open('POST', '@Url.Action("UploadImage", "Setting")', true);
+            xhr.responseType = 'json';
+        }
+
+        _initListeners(resolve, reject, file) {
+            const xhr = this.xhr;
+            const loader = this.loader;
+            const genericErrorText = `Couldn't upload file: ${file.name}.`;
+
+            xhr.addEventListener('error', () => reject(genericErrorText));
+            xhr.addEventListener('abort', () => reject());
+            xhr.addEventListener('load', () => {
+                const response = xhr.response;
+
+                // This example assumes the XHR server's "response" object will come with
+                // an "error" which has its own "message" that can be passed to reject()
+                // in the upload promise.
+                //
+                // Your integration may handle upload errors in a different way so make sure
+                // it is done properly. The reject() function must be called when the upload fails.
+                if (!response || response.error) {
+                    return reject(response && response.error ? response.error.message : genericErrorText);
+                }
+
+                // If the upload is successful, resolve the upload promise with an object containing
+                // at least the "default" URL, pointing to the image on the server.
+                // This URL will be used to display the image in the content. Learn more in the
+                // UploadAdapter#upload documentation.
+                resolve({
+                    default: response.url
+                });
+            });
+
+            // Upload progress when it is supported. The file loader has the #uploadTotal and #uploaded
+            // properties which are used e.g. to display the upload progress bar in the editor
+            // user interface.
+            if (xhr.upload) {
+                xhr.upload.addEventListener('progress', evt => {
+                    if (evt.lengthComputable) {
+                        loader.uploadTotal = evt.total;
+                        loader.uploaded = evt.loaded;
+                    }
+                });
+            }
+        }
+
+        _sendRequest(file) {
+            // Prepare the form data.
+            const data = new FormData();
+
+            data.append('upload', file);
+
+            // Important note: This is the right place to implement security mechanisms
+            // like authentication and CSRF protection. For instance, you can use
+            // XMLHttpRequest.setRequestHeader() to set the request headers containing
+            // the CSRF token generated earlier by your application.
+
+            // Send the request.
+            this.xhr.send(data);
+        }
+    } function MyCustomUploadAdapterPlugin(editor) {
+            editor.plugins.get('FileRepository').createUploadAdapter = (loader) => {
+                // Configure the URL to the upload script in your back-end here!
+                return new MyUploadAdapter(loader);
+            };
+    }
 
         ClassicEditor
         .create(document.querySelector('#inputCKname'), {
+            extraPlugins: [MyCustomUploadAdapterPlugin],
         })
         .then(editor => {
             window.editor = editor;
